fix: remove unused imports